Nginx, docker update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     volumes:
       - ./static_root:/static_root
       - ./media_storage:/media_storage
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     restart: unless-stopped
-
     networks:
       - notpal_prod_network
   
@@ -44,7 +44,6 @@ services:
     env_file:
       - ./backend/.env
     restart: unless-stopped
-
     networks:
       - notpal_prod_network
 
