--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,37 +1,51 @@
-server {
+user  nginx;
+worker_processes  1;
 
-    listen 8001;
+events {
+    worker_connections  1024;
+}
 
-    client_max_body_size 10M;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location / {
-        proxy_pass http://notary_front-npkr_front-1:8097/;
-    }
+    sendfile        on;
+    keepalive_timeout  65;
 
-    # location / {
-    #     proxy_pass http://notpal_django:8017/;
-    #     proxy_set_header Host $host;
-    # }
+    server {
+        listen 8001;
 
-    location /api {
-            proxy_pass http://notpal_prod_django:8017/api;
+        client_max_body_size 10M;
+
+        # location / {
+        #     proxy_pass http://notary_front-npkr_front-1:8097/;
+        # }
+
+        # location / {
+        #     proxy_pass http://notpal_django:8017/;
+        #     proxy_set_header Host $host;
+        # }
+
+        location /api {
+            proxy_pass http://api:8017/api;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
-	    proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-    location /admin {
-        proxy_pass http://notpal_prod_django:8017/admin;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-	proxy_set_header X-Forwarded-Proto $scheme;
-    }
+        location /admin {
+            proxy_pass http://api:8017/admin;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-    location /static_back/ {
-        alias /static_root/;
-    }
+        location /static_back/ {
+            alias /static_root/;
+        }
 
-    location /media_storage/ {
+        location /media_storage/ {
             alias /media_storage/;
         }
+    }
 }
