--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,6 +33,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        location /summernote {
+            proxy_pass http://api:8017/summernote;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location /admin {
             proxy_pass http://api:8017/admin;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
